# all_server

./: .cursorrules  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  deploy.sh  docker-app.service  hs.service  rs.service
.cursor/rules/: rule.mdc
.github/workflows/: rust.yml
config/: glance.yml
crates/book_server/: Cargo.toml
crates/book_server/src/: app.rs  auth.rs  lib.rs  main.rs  response.rs
crates/book_server/src/routers/: bs.rs  cs.rs  health_check.rs  login.rs  mod.rs  public.rs  route.rs  validate_user.rs
crates/book_server/tests/: api.rs
crates/book_server/tests/helper/: mod.rs
crates/hrms_server/: Cargo.toml
crates/hrms_server/src/: app.rs  lib.rs  main.rs
crates/hrms_server/src/routers/: mod.rs
crates/hrms_server/tests/: api.rs
crates/hrms_server/tests/helper/: mod.rs
crates/hs_server/: Cargo.toml
crates/hs_server/src/: app.rs  data.rs  utils.rs
crates/hs_server/src/routers/: card.rs
crates/recipes_server/: Cargo.toml
crates/recipes_server/src/: app.rs  crypto.rs  lib.rs  main.rs
crates/recipes_server/src/routers/: validate_user.rs
crates/recipes_server/tests/: crypto.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/utils/tests/: validate_test.rs
crates/utils_derive/: Cargo.toml
crates/utils_derive/src/: lib.rs
crates/utils_derive/tests/: macro_test.rs
crates/web/: Cargo.toml  Trunk.toml  build.sh  vercel.json
crates/web/src/: main.rs
hs_server/: Cargo.toml
hs_server/src/: main.rs
hs_server/src/routers/: meta.rs
hs_server/tests/helper/: mod.rs
migrations/: 20241211073946_create_db.sql  20241211074217_create_table.sql  20241217111119_insert_base.sql  20250210095220_test_data.sql
server/: Cargo.toml
server/src/: app.rs  data.rs  lib.rs  main.rs  utils.rs
server/src/routers/: card.rs  meta.rs  mod.rs  root.rs
server/tests/: api.rs
server/tests/helper/: mod.rs
web/: Trunk.toml
web/src/: main.rs
