[package]
name = "recipes_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
reqwest = { workspace = true }
dotenvy = {workspace = true}
axum ={workspace = true, features = ["macros", "query"]}
tower = {workspace = true, features = ["util"]}
tower-http = {workspace = true, features = ["fs", "add-extension"]}
argon2 = {workspace = true, features = ["password-hash"]}
password-hash = {workspace = true, features = ["getrandom"]}
anyhow = {workspace = true}
jsonwebtoken = {workspace = true}
jiff = {workspace = true}
http = {workspace = true}
